# PLOV

./: .env-example  .gitignore  .gitlab-ci.yml  PLAN.md  README.md  pyproject.toml
plov/: manage.py
plov/core/: apps.py  models.py
plov/core/utils/: converters.py
plov/forum/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
plov/forum/migrations/: 0001_initial.py  0002_answer.py  0003_topicview.py  0004_alter_answer_user_alter_topic_user_and_more.py  0005_answerreport_topicreport.py  0006_remove_topicreport_reporter_remove_topicreport_topic_and_more.py  0007_answerreport_topicreport.py  0008_alter_answer_options_alter_answerreport_options_and_more.py
plov/homepage/: apps.py  urls.py
plov/interactions/: apps.py  models.py  urls.py  views.py
plov/interactions/migrations/: 0001_initial.py  0002_remove_vote_specialization_vote_vote_type.py  0003_comment_parent.py  0004_alter_vote_options_alter_vote_content_type_and_more.py
plov/leaderboard/: apps.py  context_processors.py  urls.py  views.py
plov/mocklms/: apps.py  models.py  serializers.py  urls.py  views.py
plov/mocklms/management/commands/: seed_lms_profile.py
plov/mocklms/migrations/: 0001_initial.py
plov/plov/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
plov/reviews/: apps.py  forms.py  models.py  urls.py  views.py
plov/reviews/migrations/: 0001_initial.py  0002_alter_review_user_and_more.py  0003_alter_review_options_alter_review_content_and_more.py
plov/reviews/templatetags/: review_tags.py
plov/search/: urls.py  views.py
plov/static_dev/css/: item.css  reviews.css  styles.css
plov/static_dev/js/catalog/: item.js
plov/static_dev/js/includes/: footer.js
plov/static_dev/js/reviews/: review_list.js
plov/static_dev/js/reviews/partials/: review_form.js
plov/stickers/: admin.py  apps.py  constants.py  documents.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
plov/stickers/migrations/: 0001_initial.py  0002_remove_sticker_emoji.py  0003_alter_stickerpack_slug.py  0004_sticker_image_for_tg_alter_sticker_image.py  0005_stickerpack_published_on_tg.py  0006_sticker_file_id_from_tg_alter_sticker_image_for_tg.py  0007_alter_sticker_decryption.py  0008_alter_sticker_options_alter_stickerpack_options_and_more.py  0009_remove_stickerpack_normalized_name_and_more.py
plov/stickers/utils/: constants.py  signals.py
plov/templates/: base.html
plov/templates/forum/: answer_report.html  topic_detail.html  topic_list.html  topic_post.html  topic_report.html  vote_section.html
plov/templates/homepage/: homepage.html
plov/templates/includes/: footer.html  form.html  header.html
plov/templates/leaderboard/: leaderboard.html  leaderboard_fall.html  leaderboard_fall_past.html  leaderboard_my_course.html  leaderboard_my_course_err.html  leaderboard_spring.html  leaderboard_spring_past.html  rep_leaderboard.html
plov/templates/reviews/: review_confirm_delete.html  review_list.html
plov/templates/reviews/partials/: review_form.html  review_item.html  review_list.html  reviews_list_content.html  vote_controls.html
plov/templates/stickers/: add_sticker.html  add_sticker_pack.html  button.html  delete_sticker.html  search_sticker.html  stickerpack_info.html  stickerpack_list.html
plov/templates/users/: login.html  profile.html  profile_edit.html  public_profile.html  signup.html  user_detail.html  user_list.html
plov/tg_bot/: bot.py
plov/users/: admin.py  apps.py  backends.py  forms.py  models.py  tasks.py  urls.py  views.py
plov/users/migrations/: 0001_initial.py  0002_alter_usercourse_specialization.py  0003_remove_usercourse_unique_user_specialization_and_more.py  0004_user_ban_ends_at_user_ban_reason_user_banned_at_and_more.py  0004_userprofile_featured_stickers.py  0005_merge_20250423_2114.py
plov/users/tests/: test_test.py
plov/users/utils/: backends.py  lms.py  permissions.py  signals.py  validators.py
plov/users_status/: admin.py  apps.py  middleware.py  models.py
plov/users_status/migrations/: 0001_initial.py  0002_alter_userstatus_options_and_more.py
