[project]
name = "plov"
version = "0.1.0"
description = ""
authors = [
    { name = "Kir Tarasov", email = "tarasyonochek@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django>=5.2,<6.0",
    "pillow>=11.1.0,<12.0.0",
    "python-decouple>=3.8,<4.0",
    "psycopg2>=2.9.10,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "djangorestframework (>=3.16.0,<4.0.0)",
]


[project.urls]
Homepage = "https://gitlab.crja72.ru/django/2025/spring/course/projects/team-4"
Documentation = "https://gitlab.crja72.ru/django/2025/spring/course/projects/team-4/-/blob/main/README.md"
Repository = "https://gitlab.crja72.ru/django/2025/spring/course/projects/team-4"
Changelog = "https://gitlab.crja72.ru/django/2025/spring/course/projects/team-4/-/blob/main/CHANGELOG.md"


[tool.django]
settings_module = "plov.settings"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "~25.1.0"
psycopg2-binary = "~2.9.10"
django-debug-toolbar = "~5.1.0"
isort = "~6.0.1"
ipython = "~8.12.0"
mypy = "~1.15.0"
django-stubs = "~5.1.3"
django-extensions = "~3.2.3"
pre-commit = "^4.2.0"


[tool.poetry.group.flake8.dependencies]
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
# Import-related
flake8-import-order = "^0.18.2"
flake8-implicit-str-concat = "^0.5.0"
flake8-quotes = "^3.4.0"
# Code quality
flake8-eradicate = "^1.5.0"
flake8-clean-block = "^0.1.2"
# Style
pep8-naming = "^0.14.1"
flake8-use-pathlib = "^0.3.0"
flake8-print = "^5.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-django = "^4.11.1"
pytest-xdist = "^3.5.0"



[tool.poetry.group.security.dependencies]
bandit = "~1.8.3"
safety = "~3.3.1"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["plov"]
known_third_party = ["django"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["migrations", "venv", ".venv"]
default_section = "THIRDPARTY"


[tool.flake8]
max-line-length = 120
ignore = ["E203", "E266", "E501", "W503", "I202"]
import-order-style = "google"
application-import-names = ["plov"]
inline-quotes = "single"
exclude = [".git", ".venv", "venv", "*/migrations/*", "__pycache__", "*.pyc"]


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | migrations
    | __pycache__
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "plov.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--cov=plov --verbose"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for Django projects
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
mypy_path = 'plov'

plugins = [
    "mypy_django_plugin.main"
]


[tool.django-stubs]
django_settings_module = "plov.settings"


[[tool.mypy.overrides]]
module = [
    "decouple.*",
    "django.*.migrations.*",
    "tests.*",
    "*.migrations.*"
]
ignore_errors = true